@@ -118,7 +118,7 @@ MAIN GOAL for 0.6.0:
  
  	[X]  If not all binaries can be loaded, then abort?
 
-  [ ]	When loading a X-endian ELF, set the CPU's endianness to X-endian!
+  [X]	When loading a X-endian ELF, set the CPU's endianness to X-endian!
 
   [ ]	Symbol registry.
   	[ ]  Add ELF symbols (see end of FileLoader_ELF.cc).
@@ -138,7 +138,7 @@ MAIN GOAL for 0.6.0:
 
   [ ]	Cache short path names if evaluation/generation of them becomes too heavy.
 
-  [ ]	CPU endianness serialization/deserialization!
+  [X]	CPU endianness serialization/deserialization!
 
   [ ]	cpu.model = "R4000"   <==  assigning to the "model" variable should:
   	[ ]  handle writes specifically
